# superpos-sdk

docs/: FEATURE_DATA_REQUEST.md  GAP_ANALYSIS_BACKLOG.md  PRODUCT.md  index.md
docs/guide/: activity-log.md  activity-logger.md  agent-authentication.md  agent-heartbeat-lifecycle.md  agent-registration-api.md  agent-sdk-use-cases.md  ci-cd.md  concepts-agents.md  concepts-cross-hive.md  concepts-events.md  concepts-knowledge.md  concepts-organization-hives.md  concepts-permissions.md  concepts-policies.md  concepts-service-proxy.md  concepts-tasks.md  concepts-webhooks.md  database-factories.md  e2e-integration-tests.md  executor-model-contract.md  frontend-setup.md  horizon-queue-config.md  knowledge-api.md  knowledge-explorer.md  local-development-setup.md  permission-middleware.md  python-sdk.md  realtime-updates.md  shell-sdk.md  task-polling-claiming.md  task-timeout-retry.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python-compat/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py  service_worker_example.py  worker_agent.py
sdk/python/src/apiary_sdk/: __init__.py  agent.py  async_agent.py  async_client.py  client.py  constants.py  exceptions.py  large_result.py  models.py  service_worker.py  streaming.py
sdk/python/src/apiary_sdk/resources/: __init__.py  channel.py  knowledge.py  task.py
sdk/python/src/apiary_sdk/resources/async_resources/: __init__.py  channel.py  knowledge.py  task.py
sdk/python/src/apiary_sdk/skills/: __init__.py  async_skills.py  sync_skills.py
sdk/python/src/apiary_sdk/workers/: __init__.py  github.py  gmail.py  http.py  jira.py  sheets.py  slack.py  sql.py
sdk/python/src/superpos_sdk/: __init__.py  _github_host.py  agent.py  async_agent.py  async_client.py  client.py  constants.py  exceptions.py  gh_token.py  large_result.py  models.py  service_worker.py  streaming.py
sdk/python/src/superpos_sdk/resources/: __init__.py  channel.py  knowledge.py  task.py
sdk/python/src/superpos_sdk/resources/async_resources/: __init__.py  channel.py  knowledge.py  task.py
sdk/python/src/superpos_sdk/skills/: __init__.py  async_skills.py  sync_skills.py
sdk/python/src/superpos_sdk/workers/: __init__.py  github.py  gmail.py  http.py  jira.py  sheets.py  slack.py  sql.py
sdk/python/tests/: conftest.py  test_agent_context.py  test_agents.py  test_apiary_compat_distribution.py  test_apiary_compat_submodules.py  test_async_agent.py  test_async_client.py  test_channels.py  test_client.py  test_constants.py  test_event_polling.py  test_gh_token.py  test_github_worker.py  test_knowledge.py  test_knowledge_graph.py  test_large_result.py  test_persona.py  test_service_catalog.py  test_service_worker.py  test_streaming.py  test_sub_agent.py  test_tasks.py  test_workflows.py
sdk/python/tests/resources/: test_async_channel.py  test_async_knowledge_entry.py  test_async_task.py  test_channel.py  test_knowledge_entry.py  test_task.py
sdk/python/tests/skills/: test_async_skills.py  test_decide.py  test_discuss.py  test_recall.py  test_remember.py
sdk/python/tests/test_workers/: test_github_worker.py  test_gmail_worker.py  test_http_worker.py  test_jira_worker.py  test_sheets_worker.py  test_slack_worker.py  test_sql_worker.py
(+191 files in other folders)
