[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiary-sdk"
version = "0.1.0"
description = "Transitional package: apiary-sdk has been renamed to superpos-sdk"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Superpos AI", email = "dev@superpos.ai" },
]
keywords = ["superpos", "apiary", "agent", "orchestration", "sdk", "transition"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "superpos-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Superpos-AI/superpos-sdk"
Repository = "https://github.com/Superpos-AI/superpos-sdk"
