[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superpos-sdk"
version = "0.1.0"
description = "Python SDK for the Superpos agent orchestration platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Superpos AI", email = "dev@superpos.ai" },
]
keywords = ["superpos", "agent", "orchestration", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
http = ["httpx>=0.27,<1"]
github = ["httpx>=0.27,<1"]
slack = ["httpx>=0.27,<1"]
gmail = ["google-api-python-client>=2.0", "google-auth>=2.0"]
sheets = ["google-api-python-client>=2.0", "google-auth>=2.0"]
jira = ["httpx>=0.27,<1"]
sql = ["sqlalchemy>=2.0"]
workers = [
    "httpx>=0.27,<1",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.34",
    "pytest-xdist>=3.6",
    "ruff>=0.8",
    "sqlalchemy>=2.0",
]

[project.scripts]
superpos-gh-token = "superpos_sdk.gh_token:main"

[project.urls]
Homepage = "https://github.com/Superpos-AI/superpos-sdk"
Documentation = "https://github.com/Superpos-AI/superpos-sdk/tree/main/sdk/python"
Repository = "https://github.com/Superpos-AI/superpos-sdk"
Issues = "https://github.com/Superpos-AI/superpos-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["superpos_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
